UI flicker fix, Libraries horizontal rule fix, Unpinned toolbar fix, Tooltips for Panel collapse/expand

--- a/src/style/sections/libraries/libraries-section.less
+++ b/src/style/sections/libraries/libraries-section.less
@@ -31,10 +31,6 @@
     flex-grow: 1;
     flex-shrink: 0;
     
-    .section-title {
-        border-bottom: @hairline solid @layer-divider;
-    }
-    
     .section-container {
         padding: 0;
         overflow-y: hidden;
@@ -85,6 +81,7 @@
         height: 3rem;
         margin: 0 2rem;
         align-items: center;
+        border-top: @hairline solid @layer-divider;        
         border-bottom: @hairline solid @layer-divider;
         
         .drop-down {
